# decon-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/: review-prompt.md
.github/workflows/: ci.yml  rs-guard-review.yml
crates/decon-cli/: Cargo.toml
crates/decon-cli/src/: main.rs
crates/decon-cli/tests/: cli.rs
crates/decon-core/: Cargo.toml
crates/decon-core/src/: abstraction.rs  budget.rs  checkpoint.rs  config.rs  diagrams.rs  eval.rs  extract.rs  lib.rs  mermaid.rs  module.rs  progress.rs  scope.rs  secrets.rs  setup.rs
crates/decon-crawl/: Cargo.toml
crates/decon-crawl/src/: lib.rs  local.rs
crates/decon-llm/: Cargo.toml
crates/decon-llm/src/: cache.rs  client.rs  concurrency.rs  error.rs  lib.rs  mock.rs  openai_client.rs
crates/decon-pipeline/: Cargo.toml
crates/decon-pipeline/src/: checkpoint_store.rs  dry_run.rs  identify.rs  lib.rs  prompts.rs  resume.rs
crates/decon-pipeline/tests/: dry_run_parity.rs  live_smoke.rs  prompt_rendering.rs  prompts.rs
docs/: best-practices.md  m1-coverage-summary.md  m2-coverage-baseline.md  move-to-rust.md
docs/adr/: 0001-checkpoint-schema-v1.md
prompts/: README.md  analyze_relationships.md.j2  chapter_outline.md.j2  identify_map.md.j2  identify_reduce.md.j2  identify_single_shot.md.j2  order_chapters.md.j2  review_chapter.md.j2  write_architecture_overview.md.j2  write_chapter.md.j2  write_setup_guide.md.j2
scripts/: install-hooks.sh
tests/fixtures/: README.md  baseline.json  regenerate_baseline.rs
tests/fixtures/js-lib/: README.md  package.json  tsconfig.json
tests/fixtures/js-lib/src/: index.ts
tests/fixtures/python-lib/: .env.example  README.md  pyproject.toml
tests/fixtures/python-lib/src/mylib/: __init__.py  cli.py
tests/fixtures/tutorials/broken-mini/: 01_chapter.md  index.md
tests/fixtures/tutorials/good-mini/: 00_setup.md  01_overview.md  02_core.md  index.md
tests/fixtures/umbrella/: .env.example  README.md  mix.exs
tests/fixtures/umbrella/apps/alpha/: mix.exs
tests/fixtures/umbrella/apps/alpha/lib/: alpha.ex
tests/fixtures/umbrella/apps/beta/: mix.exs
tests/fixtures/umbrella/apps/beta/lib/: beta.ex
tests/fixtures/umbrella/apps/gamma/: mix.exs
tests/fixtures/umbrella/apps/gamma/lib/: gamma.ex
tests/fixtures/umbrella/config/: config.exs
