[package]
name = "decon-core"
description = "Pure domain models and pipeline traits for decon (no network I/O)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
