[package]
name = "decon-core"
description = "Pure domain models and pipeline traits for decon (no network I/O)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yml = "0.0.12"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
