[package]
name = "decon-crawl"
description = "Local filesystem and GitHub repository crawling for decon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
decon-core = { path = "../decon-core" }
