[package]
name = "decon-crawl"
description = "Local filesystem and GitHub repository crawling for decon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
# decon-core is intentionally not required for path inventory alone; pipeline
# stages that attach domain types will re-introduce the dependency when needed.
thiserror = "2.0"

[dev-dependencies]
serde_json = "1.0"
tempfile = "3.20"
