[package]
name = "decon-pipeline"
description = "Stage orchestration, checkpoint/resume, and dry-run planning for decon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
decon-core = { path = "../decon-core" }
decon-crawl = { path = "../decon-crawl" }
decon-llm = { path = "../decon-llm" }
thiserror = "2.0"
flate2 = "1"
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
# Pinned because prompt syntax is sensitive to minijinja/Jinja2 behavior and
# golden/snapshot tests depend on exact render output.
minijinja = "=2.20.0"
serde_json = "1.0"
