[package]
name = "decon-pipeline"
description = "Stage orchestration, checkpoint/resume, and dry-run planning for decon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
decon-core = { path = "../decon-core" }
decon-crawl = { path = "../decon-crawl" }
decon-llm = { path = "../decon-llm" }
thiserror = "2.0"
flate2 = "1"
base64 = "0.22"
serde_json = "1"
serde_yaml = "0.9"
# Pinned because prompt syntax is sensitive to minijinja/Jinja2 behavior and
# golden/snapshot tests depend on exact render output.
minijinja = "=2.20.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
async-trait = "0.1"

[features]
# Opt-in live LLM smoke tests. When enabled, the `tests/live_smoke.rs`
# integration test is compiled and may make real (budget-capped) API calls
# to DeepSeek. Default builds and CI do NOT enable this feature, so the
# live tests are never compiled or run there. Tests also skip automatically
# when no API key is present in the environment.
live-llm = []
