[package]
name = "decon-pipeline"
description = "Stage orchestration, checkpoint/resume, and dry-run planning for decon."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
decon-core = { path = "../decon-core" }
decon-crawl = { path = "../decon-crawl" }
decon-llm = { path = "../decon-llm" }
thiserror = "2.0"
flate2 = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Pinned because prompt syntax is sensitive to minijinja/Jinja2 behavior and
# golden/snapshot tests depend on exact render output.
minijinja = "=2.20.0"

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt"] }
async-trait = "0.1"
